Fix - menu not showing if closed on mobile menu

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -50,6 +50,11 @@ responsive CSS
         z-index: 9999;
         padding: 0 20px;
     }
+
+    #site-navigation .menu.show-menu {
+        display: block;
+    }
+    
     #site-navigation .menu-toggle {
         cursor: pointer;
         display: inline-block;
